# vision_tps

./: .gitignore  README.md  main.py  pyproject.toml
tp2/: vision-tp2.ipynb
