[project]
name = "vision-tps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.3",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "opencv-contrib-python>=4.13.0.92",
    "pyqt6>=6.11.0",
    "rawpy>=0.26.1",
    "scikit-image>=0.26.0",
    "supervision>=0.27.0.post2",
]
